--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url= jdbc:mysql://localhost:3306/notuberdb?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= L0v3Fv162
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
