--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>5.6.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
