--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.address=0.0.0.0
+
 spring.datasource.url= jdbc:mysql://localhost:3306/notuberdb?useSSL=false
 spring.datasource.username= root
 spring.datasource.password= L0v3Fv162
