--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-server.address=0.0.0.0
-
+#Primary
 spring.datasource.url= jdbc:mysql://localhost:3306/notuberdb?useSSL=false
 spring.datasource.username= root
 spring.datasource.password= L0v3Fv162
