--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-#Primary
-spring.datasource.url= jdbc:mysql://localhost:3306/notuberdb?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= L0v3Fv162
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# Desactivar configuración de base de datos
+# spring.datasource.url=
+# spring.datasource.username=
+# spring.datasource.password=
+# spring.datasource.driver-class-name=
+
+# Desactivar Spring Data JPA
+spring.data.jpa.enabled=false
+
+
+xml.file.path=Datos/users.xml
